// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User createOne 1`] = `
{
  "_id": Any<Object>,
  "createdAt": Any<String>,
  "email": "test@test.com",
  "firstName": "Test",
  "id": Any<String>,
  "lastName": "User1",
  "password": "password1",
  "primaryLanguage": "English",
  "role": "MEMBER",
}
`;

exports[`User findOne 1`] = `
{
  "_id": Any<Object>,
  "createdAt": Any<String>,
  "email": "test@test.com",
  "firstName": "Test",
  "id": Any<String>,
  "lastName": "User1",
  "password": "password1",
  "primaryLanguage": "English",
  "role": "MEMBER",
}
`;

exports[`User updateOne 1`] = `
{
  "_id": Any<Object>,
  "createdAt": Any<String>,
  "email": "test@test.com",
  "firstName": "Test3",
  "id": Any<String>,
  "lastName": "User1",
  "password": "password1",
  "primaryLanguage": "French",
  "role": "MEMBER",
}
`;
